--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
 
+    <div id="output"></div>
+    <div style="height: 1000px"></div>
+
     <div id="example">
         <span class="levus-skills" data-result="10" data-speed="3.5">
             10
@@ -22,6 +25,8 @@
         </span>
     </div>
 
+    <div style="height: 1000px"></div>
+    
     <script src="js/levus-skills.js"></script>
 </body>
 
